--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - export PATH=${GOPATH//://bin:}/bin:PATH
-  - goveralls -v $COVERALLS_TOKEN
+  - goveralls -v -service travis-ci.org $COVERALLS_TOKEN
